--- a/style.css
+++ b/style.css
@@ -23,7 +23,9 @@ body{
 }
 
 .sidebar{
+    overflow-y: scroll;
     width: 250px;
+    height: 100%;
     background-color: #2b2b2b;
     position: fixed;
     display: block;
@@ -99,13 +101,12 @@ margin-left: 250px;
     width: 100%;
     height: 330px;
     background: url('img/head.jpg');
-    display: flex;
 }
 .titr{
     position: absolute;
     font-size: 55px;
     color: white;
-    top: 190px;
+    bottom: 20px;
     margin-left: 200px;
 }
 .section1{
@@ -117,8 +118,7 @@ margin-left: 250px;
     width: 25%;
     display: inline-block;
     vertical-align: top;
-    margin-right: 20px;
-
+    margin: 0 auto;
 
 }
 .biography{
@@ -309,5 +309,9 @@ margin-top: 20px;
     .blog{
         margin-left: 0;
     }
+    .titr{
+        font-size: 40px;
+        text-align: left;
+        align-items: center;    }
 
 }
