--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body{
     text-align: center;
     padding: 25px;
 }
-.icon{
+/* .icon{
     background-color: #313131;
 
 }
@@ -79,16 +79,18 @@ body{
     transition: background 0.5s;
     padding: 9px;
 }
-.faicon{
-    font-size: 15px;
-    margin: 5px ;
-}
+
 .txicon{
     margin-left: 5px;
     font-size: 14px;
 
 }
-
+ */
+ .faicon{
+    font-size: 15px;
+    margin: 5px ;
+    align-items: center;
+}
 
 
 
@@ -100,21 +102,31 @@ body{
   float: left;
   background-color: #313131;
   width: 100%;
-  height: 300px;
 }
 
 /* Style the buttons that are used to open the tab content */
 .tab button {
   display: block;
   background-color: inherit;
-  color:#fff;
-  padding: 22px 16px;
   width: 100%;
   border: none;
   outline: none;
   text-align: left;
   cursor: pointer;
   transition: 0.3s;
+  color: #fff;
+  float: none;
+  clear: both;
+  background: #303030;
+  border-top: 1px solid #373737;
+  border-bottom: 1px solid #2B2B2B;
+  cursor: pointer;
+  -webkit-transition: background 0.5s;
+  -moz-transition: background 0.5s;
+  -o-transition: background 0.5s;
+  -ms-transition: background 0.5s;
+  transition: background 0.5s;
+  padding: 9px;
 }
 
 /* Change background color of buttons on hover */
@@ -130,7 +142,7 @@ body{
 /* Style the tab content */
 .tabcontent {
   float: left;
-  padding: 0px 12px;
+  padding: 0px 6px;
   width: 100%;
   border-left: none;
   height: 300px;
@@ -145,10 +157,14 @@ body{
 
 
 
-.footer-sidebar li{
-    color: #fff;
+.footer-sidebar li {
     display: inline-block;
-text-align: center;}
+}
+.footer-sidebar li a{
+color: #fff;
+
+}
+
 .center{
 
   display: block;
@@ -176,7 +192,6 @@ margin-left: 250px;
     
     width: 80%;
     margin: 0 auto;
-    padding: 0 ;
 }
 /* .imgbox{
     width: 25%;
@@ -363,6 +378,11 @@ list-style-type: none;
 .space{
 margin-bottom: 20px;
 margin-top: 20px;
+}
+.researchtab{
+    padding: 100px 100px;
+    font-size: 16px;
+
 }
 
 
